# simple-http-server

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  windows.nix
served_files/: Readme.md  env2.apk  index.html
src/: main.rs
