[package]
name = "simple-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
open = "5.3.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
