[package]
name = "simple-http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
open = "5.3.2"
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
